# adeept_darkpaw_cpp

./: .gitignore  CMakeLists.txt  README.md
docs/: darkpaw_gait_seed_values.md  semantic_leg_authoring.md
examples/gaits/: hold_neutral.json  slow_backward_creep.json  slow_forward_creep.json
examples/gaits/darkpaw/: slow_forward_creep.json  slow_rotate_right.json
examples/gaits_old/: hold_neutral.json  slow_forward_creep.json  slow_rotate_left.json
examples/poses/: diagonal_a_backward.json  diagonal_a_forward.json  diagonal_a_forward_b_backward.json  diagonal_a_forward_place.json  diagonal_a_forward_place_b_backward.json  diagonal_a_lift.json  diagonal_a_lift_b_backward.json  diagonal_b_backward.json  diagonal_b_forward.json  diagonal_b_forward_place.json  diagonal_b_lift.json  diagonal_b_lift_a_backward.json  neutral_stand.json  rotate_left_a.json  rotate_left_b.json  rotate_right_a.json  rotate_right_b.json  test.json
examples/poses/darkpaw/: diagonal_a_lift.json  diagonal_b_forward.json  diagonal_b_lift.json  neutral_stand.json  rotate_left_a.json
examples/poses_old/: diagonal_a_backward.json  diagonal_a_forward.json  diagonal_a_lift.json  diagonal_b_backward.json  diagonal_b_forward.json  diagonal_b_forward_a_backward.json  diagonal_b_forward_place_a_backward.json  neutral_stand.json  rotate_right_b.json
examples/semantic/: darkpaw_profile.json
examples/semantic/gaits/: hold_neutral.json  slow_backward_creep.json  slow_forward_creep.json  slow_rotate_left.json  slow_rotate_right.json
examples/semantic/poses/: crouch.json  diagonal_a_forward.json  diagonal_a_lift.json  diagonal_a_place.json  diagonal_b_forward.json  diagonal_b_lift.json  diagonal_b_place.json  front_left_lift.json  neutral_stand.json  wide_stand.json
inc/: gait_controller.h  gait_definition.h  gait_pose.h  gait_trajectory.h  motion_command.h  pca9685.h  semantic_gait.h  semantic_pose.h  semantic_profile.h  servo.h  servo_calibration.h  utils.h
scripts/: run_gait_on_robot.sh  run_pose_on_robot.sh  run_semantic_gait_on_robot.sh  setup_raspbian.sh  test_all_semantic_joints_on_robot.sh  test_semantic_joint_on_robot.sh  test_semantic_robot_movements_on_robot.sh  test_servo_on_robot.sh
src/: diagnostics.cpp  gait_controller.cpp  gait_definition.cpp  gait_json.cpp  gait_replay_main.cpp  gait_validate_main.cpp  main.cpp  servo.cpp  servo_calibration.cpp  utils.cpp
src/actuation/: semantic_profile.cpp  servo.cpp  servo_calibration.cpp
src/gait/: gait_controller.cpp  gait_json.cpp  gait_pose.cpp  gait_trajectory.cpp  motion_command.cpp  semantic_gait.cpp  semantic_pose.cpp
src/hal/: pca9685.cpp
src/tools/: diagnostics_main.cpp  gait_compile_main.cpp  gait_dry_run_main.cpp  gait_play_main.cpp  semantic_gait_compile_main.cpp  semantic_gait_validate_main.cpp  semantic_joint_test_main.cpp  semantic_pose_print_main.cpp  semantic_profile_validate_main.cpp  servo_test_main.cpp  spider_robot_main.cpp
tests/: test_gait_authoring.cpp  test_gait_controller.cpp  test_gait_examples.cpp  test_motion_command.cpp  test_semantic_authoring.cpp  test_servo_math.cpp
